--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.kumuluz.ee.samples.tutorial</groupId>
-        <artifactId>kumuluzee-tutorial</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
-    <artifactId>kumuluzee-tutorial-customers</artifactId>
+    <groupId>com.tomakic</groupId>
+    <artifactId>pdftotext</artifactId>
+    <version>1.0.0</version>
 
     <packaging>pom</packaging>
 
