--- a/customers-business-logic/pom.xml
+++ b/customers-business-logic/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>kumuluzee-tutorial-customers</artifactId>
-        <groupId>com.kumuluz.ee.samples.tutorial</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <artifactId>pdftotext</artifactId>
+        <groupId>com.tomakic</groupId>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
