--- a/customers-business-logic/pom.xml
+++ b/customers-business-logic/pom.xml
@@ -13,6 +13,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.tomakic</groupId>
+            <artifactId>customers-persistence</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-cdi-weld</artifactId>
         </dependency>
@@ -47,10 +53,10 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>com.kumuluz.ee.samples.tutorial</groupId>
-            <artifactId>customers-persistence</artifactId>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>javax.persistence</artifactId>
+            <version>RELEASE</version>
         </dependency>
     </dependencies>
 
