--- a/pom.xml
+++ b/pom.xml
@@ -113,32 +113,32 @@
 
             <!-- Project modules dependencies -->
             <dependency>
-                <groupId>com.kumuluz.ee.samples.tutorial</groupId>
+                <groupId>com.tomakic.pdftotext</groupId>
                 <artifactId>customers-api</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>com.kumuluz.ee.samples.tutorial</groupId>
+                <groupId>com.tomakic.pdftotext</groupId>
                 <artifactId>customers-business-logic</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>com.kumuluz.ee.samples.tutorial</groupId>
+                <groupId>com.tomakic.pdftotext</groupId>
                 <artifactId>customers-persistence</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>com.kumuluz.ee.samples.tutorial</groupId>
+                <groupId>com.tomakic.pdftotext</groupId>
                 <artifactId>orders-api</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>com.kumuluz.ee.samples.tutorial</groupId>
+                <groupId>com.tomakic.pdftotext</groupId>
                 <artifactId>orders-business-logic</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>com.kumuluz.ee.samples.tutorial</groupId>
+                <groupId>com.tomakic.pdftotext</groupId>
                 <artifactId>orders-persistence</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
